--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,30 @@
 body{
     font-family: 'Roboto', sans-serif;
-    color: black;
+    color: #434455;
     background-color: white;
     font-size: 16px;
-    font-weight: 400;
     }
     .site-nav .link:hover, .site-nav .link:active {
         color: #4D5AE5;
     }
     .contact:hover{
         color: #4D5AE5;
+    }
+    .title{
+        color: white;
+        background-color: #2E2F42;
+        font-size:  56px;
+        font-weight: 700;
+        letter-spacing: 2%;
+        line-height: 60px;
+        text-align: center;
+
+    }
+    .button{
+        color: white;
+        background-color: #4D5AE5;
+        font-size: 12px;
+        letter-spacing: 4%;
+        text-decoration: underline;
+
     }
