--- a/css/styles.css
+++ b/css/styles.css
@@ -10,21 +10,33 @@ body{
     .contact:hover{
         color: #4D5AE5;
     }
-    .title{
+    .post1{
         color: white;
+        background-color: #2E2F42;
+        text-align: center;
+    }
+    .title{color: white;
+        
         background-color: #2E2F42;
         font-size:  56px;
         font-weight: 700;
-        letter-spacing: 2%;
+        letter-spacing: 2px;
         line-height: 60px;
-        text-align: center;
-
     }
     .button{
         color: white;
         background-color: #4D5AE5;
-        font-size: 12px;
-        letter-spacing: 4%;
-        text-decoration: underline;
+        letter-spacing: 4px;
 
     }
+   .section1-title{
+    font-weight: 500;
+    font-size: 20px;
+    letter-spacing: 2px;
+    text-align: left;
+
+   }
+   .header2{
+    font-weight: 700;
+    font-size: 36px;
+ }
