--- a/css/styles.css
+++ b/css/styles.css
@@ -11,32 +11,40 @@ body{
         color: #4D5AE5;
     }
     .post1{
-        color: white;
-        background-color: #2E2F42;
-        text-align: center;
-    }
-    .title{color: white;
-        
-        background-color: #2E2F42;
+            color: white;
+            background-color: #2E2F42;
+            text-align: center;
+        }
+    .title{
         font-size:  56px;
         font-weight: 700;
-        letter-spacing: 2px;
+        letter-spacing: 2%;
         line-height: 60px;
     }
     .button{
         color: white;
         background-color: #4D5AE5;
         letter-spacing: 4px;
-
+        cursor: pointer
     }
    .section1-title{
     font-weight: 500;
     font-size: 20px;
-    letter-spacing: 2px;
+    letter-spacing: 2%;
     text-align: left;
-
+   }
+   section1-text{
+    text-align: left;
+   }
+   .post2{
+    background-color: #F4F4FD;
    }
    .header2{
     font-weight: 700;
     font-size: 36px;
+    text-align: center;
+ }
+ .section2-title{
+    font-weight: 700;
+    letter-spacing: 2%;
  }
