--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,18 @@ body{
     font-weight: 700;
     letter-spacing: 2%;
  }
+.section3-title{
+    font-weight: 500;
+    font-size: 20px;
+    letter-spacing: 2%;
+    text-align: left;
+
+}
+.section3-text{
+    text-align: left;
+}
+.footer{
+    color: white;
+    background-color: #2E2F42;
+    text-align: left;
+}
