--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto','Verdana', 'Tahoma', sans-serif;
     color: #434455;
     background-color: white;
     font-size: 16px;
