--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,15 @@ body{
     color: #434455;
     background-color: white;
     font-size: 16px;
+    line-height: 1.5;
     }
     .site-nav .link:hover, .site-nav .link:active {
         color: #4D5AE5;
+        text-decoration: none;
     }
     .contact .link:hover{
         color: #4D5AE5;
+        text-decoration: none;
     }
 
     .post1{
@@ -19,13 +22,14 @@ body{
     .title{
         font-size:  56px;
         font-weight: 700;
-        letter-spacing: 2%;
-        line-height: 60px;
+        letter-spacing: 0.02;
+        line-height: 1.07;
     }
     .button{
         color: white;
         background-color: #4D5AE5;
         letter-spacing: 4px;
+        line-height: 1.5;
         cursor: pointer
     }
     .button .link:hover, .button .link:active{
@@ -35,7 +39,7 @@ body{
    .section1-title{
     font-weight: 500;
     font-size: 20px;
-    letter-spacing: 2%;
+    letter-spacing: 0.02;
     text-align: left;
    }
    .section1-text{
@@ -51,12 +55,12 @@ body{
  }
  .section2-title{
     font-weight: 500;
-    letter-spacing: 2%;
+    letter-spacing: 0.02;
  }
 .section3-title{
     font-weight: 500;
     font-size: 20px;
-    letter-spacing: 2%;
+    letter-spacing: 0.02;
     text-align: left;
 
 }
