--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@ body{
         color: #4D5AE5;
         text-decoration: none;
     }
-
     .post1{
             color: white;
             background-color: #2E2F42;
@@ -50,12 +49,12 @@ body{
     text-align: left;
    }
    .post2{
-    list-style: none
+    list-style: none;
     background-color: #F4F4FD;
    }
    .header2{
     font-weight: 700;
-    font-size: 36px;
+    font-size: 20px;
     text-align: center;
 }
  .section2-title{
