--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@ body{
     font-size: 16px;
     line-height: 1.5;
     }
+    ul{
+        text-decoration: none;
+    }
     .accent{
         color:#404BBF;
     }
