--- a/css/styles.css
+++ b/css/styles.css
@@ -13,24 +13,38 @@ body{
         text-decoration: none;
         list-style: none;
     }
+    a{
+        color: inherit;
+        text-decoration: none;
+    }
+    .logo{
+        font-family: Raleway;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 21px;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    }
     .accent{
-        color:#404BBF;
+        font-family: Raleway;
+        color: #404BBF;
+
     }
     .site-nav{
         color: #2E2F42;
         font-weight: 700;
         text-decoration: none;
     }
-    .site-nav .link:hover, .site-nav .link:active {
+    .site-nav .site-nav:hover, .site-nav .site-nav:active{
         color: #4D5AE5;
     }
-    .contact{
-        color: #2E2F42;
+    .adress{
+        color: inherit;
         font-size: 12px;
         text-decoration: none;
-        letter-spacing: 0.04;
+        letter-spacing: 0.04em;
     }
-    .contact .link:hover{
+    .adress .link:hover{
         color: #4D5AE5;
     }
     .post1{
@@ -42,53 +56,54 @@ body{
     .title{
         font-size:  56px;
         font-weight: 700;
-        letter-spacing: 0.02;
+        letter-spacing: 0.02em;
         line-height: 1.07;
     }
     .button{
         color: white;
         background-color: #4D5AE5;
-        letter-spacing: 4px;
+        letter-spacing: 0.04em;
         line-height: 1.5;
         cursor: pointer;
     }
-    .button .link:hover, .button .link:active{
+    .button .button:hover, .button .button:active{
         background-color: #404BBF;
     }
-   .section1-title{
+    .h2{
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 40px;
+        letter-spacing: 0.02em;
+        text-align: center;
+    }
+    .h3{
     font-weight: 500;
     font-size: 20px;
-    letter-spacing: 0.02;
-    text-align: left;
-}
-   .section1-text{
+    line-height: 24px;
+    letter-spacing: 0.002em;
+    text-align: center;
+    }
+    .text1{
     list-style: none;
     text-align: left;
 }
-   .post2{
+.post2{
     list-style: none;
     background-color: #F4F4FD;
 }
-   .header2{
+.header2{
     font-weight: 700;
     font-size: 20px;
     text-align: center;
 }
- .section2-title{
-    font-weight: 500;
-    letter-spacing: 0.02;
-    list-style: none;
-}
+.text2{
+    font-weight: 700;
+    text-align: center;
+ }
  .post3{
     list-style: none;
 }
-.section3-title{
-    font-weight: 500;
-    font-size: 20px;
-    letter-spacing: 0.02;
-    text-align: left;
-}
-.section3-text{
+.text3{
     text-align: left;
 }
 .footer{
