--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,12 @@ body{
         color: #404BBF;
 
     }
-    .link{
+    .site-nav{
         color: #2E2F42;
         font-weight: 700;
         text-decoration: none;
     }
-    link .link:hover, .link .link:active{
+    .site-nav .site-nav:hover, .site-nav .site-nav:active{
         color: #4D5AE5;
     }
     .adress{
@@ -44,7 +44,7 @@ body{
         text-decoration: none;
         letter-spacing: 0.04em;
     }
-    .adress .link:hover{
+    .adress .adress:hover{
         color: #4D5AE5;
     }
     .post1{
