--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body{
         text-decoration: none;
         letter-spacing: 0.04em;
     }
-    .adress .adress:hover{
+    .adress:hover{
         color: #4D5AE5;
     }
     .post1{
